add new route change password

--- a/home/protected/.env
+++ b/home/protected/.env
@@ -26,8 +26,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=d10c708cc78b68
+MAIL_PASSWORD=71a9e9bd9a1275
 MAIL_ENCRYPTION=null
 
 AWS_ACCESS_KEY_ID=
