--- a/home/protected/.env
+++ b/home/protected/.env
@@ -24,11 +24,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=d10c708cc78b68
 MAIL_PASSWORD=71a9e9bd9a1275
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
