update admin route

--- a/home/protected/.env
+++ b/home/protected/.env
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=d10c708cc78b68
-MAIL_PASSWORD=71a9e9bd9a1275
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=ufaculties.fit@gmail.com
+MAIL_PASSWORD=thonghp166
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
