--- a/home/protected/.env
+++ b/home/protected/.env
@@ -2,7 +2,7 @@ APP_NAME=uFaculties
 APP_ENV=local
 APP_KEY=base64:7JWJVfSllyBjPK/yUXELJT5Bd9QGKzFFTXkfbCm6LJI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://ufaculties.vn
 
 LOG_CHANNEL=stack
 
